--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Mythology'
 - !lcsh 'Religion'
 - !lcsh 'Manners and customs'
+- GITenberg
 title: 'Custom and Myth
 
   New Edition'
